completed add button functionality; points to associated menus; todo: complete category button functionality

--- a/views/index.html
+++ b/views/index.html
@@ -280,6 +280,7 @@
             background-position: center center;
             position: fixed;
             border-radius: 50%;
+            transition: opacity 0.5s, height: 0.5s;
         }
         
         #create-option-button-container{
@@ -287,6 +288,16 @@
             left: 15%;
             background-color: rgba(255, 0, 0, 0.7);
             background-size: 118% 118%;
+            opacity: 1.0;
+        }
+        
+        #back-option-button-container{
+            background-image: url("../media/img/back-button.png");
+            left: 15%;
+            background-color: rgba(255, 255, 255, 0.7);
+            background-size: 140% 140%;
+            display: none;
+            opacity: 0;
         }
         
         #category-option-button-container{
@@ -294,6 +305,16 @@
             right: 15%;
             background-color: rgba(50, 205, 50, 0.7);
             background-size: 125% 125%;
+            opacity: 1.0;
+        } 
+        
+        #save-option-button-container{
+            background-image: url("../media/img/save.png");
+            right: 15%;
+            background-color: rgba(255, 255, 255, 0.7);
+            background-size: 85% 85%;
+            display: none;
+            opacity: 0;
         }
         
         #search-for-category-container{
@@ -306,6 +327,12 @@
             outline: none;
             text-align: center;
             font-size: 18px;
+        }
+        
+        .white-category-colors, .white-category-colors::placeholder{
+            color: white;
+            font-weight: 900;
+            font-size: 20px;
         }
         
     </style>
@@ -544,40 +571,124 @@
             });
             
             document.getElementById("create-option-button-container").addEventListener("click", function(){
-                
+                createPoll();
             });
             
             document.getElementById("category-option-button-container").addEventListener("click", function(){
-                
+                openCategories();
             });
         });
         
+        var creatingAPoll = false;
+        
         function createPoll(){
+            if(creatingAPoll){
+                console.log("already creating a poll!");
+            }
+            else{
+                console.log("create a new poll");
+                sharePollWithAudience();
+            }
+        }
+        
+        function backToMainWidgetMenu(){
+            document.getElementById("create-option-button-container").style.display = "block";
+            document.getElementById("category-option-button-container").style.display = "block";
             
+            setTimeout(function(){
+                document.getElementById("create-option-button-container").style.opacity = 1.0;
+                document.getElementById("category-option-button-container").style.opacity = 1.0;
+            }, 50);
+
+            
+            document.getElementById("back-option-button-container").style.opacity = 0;
+            document.getElementById("save-option-button-container").style.opacity = 0;
+            
+            setTimeout(function(){
+                document.getElementById("back-option-button-container").style.display = "none";
+                document.getElementById("save-option-button-container").style.display = "none";
+            }, 500);
+            
+            // change the plaecholder in the category search input to match the main menu styling
+            document.getElementById("search-for-category-container").setAttribute("placeholder", "Search Rushmore Rankings...");
+            document.getElementById("search-for-category-container").classList.remove("white-category-colors");
+            document.getElementById("search-for-category-container").style.backgroundColor = "white";
+            
+            discardPoll();
+        }
+        
+        function openRankingCreateMenu(){
+             document.getElementById("back-option-button-container").style.display = "block";
+            document.getElementById("save-option-button-container").style.display = "block";
+            
+            setTimeout(function(){
+                document.getElementById("back-option-button-container").style.opacity = 1.0;
+                document.getElementById("save-option-button-container").style.opacity = 1.0;
+            }, 50);
+
+            
+            document.getElementById("create-option-button-container").style.opacity = 0;
+            document.getElementById("category-option-button-container").style.opacity = 0;
+            
+            setTimeout(function(){
+                document.getElementById("create-option-button-container").style.display = "none";
+                document.getElementById("category-option-button-container").style.display = "none";
+            }, 500);
+            
+            // change the plaecholder in the category search input to match its new target: the title of the current poll draft
+            document.getElementById("search-for-category-container").setAttribute("placeholder", "Name Your Rank1ng");
+            document.getElementById("search-for-category-container").classList.add("white-category-colors");
+            document.getElementById("search-for-category-container").style.backgroundColor = "red";
         }
         
         function sharePollWithAudience(){
+            //changing option buttons visible to user
+            // back button to return to main menu
+            // save button to register poll as a draft on the user's account
+            //  taps function registerPollAsDraftByHost()
             
+           openRankingCreateMenu();
+            
+            //back button functionality
+            //returns to main menu on click
+            document.getElementById("back-option-button-container").addEventListener("click", function(){
+                backToMainWidgetMenu();
+                toggleRushmoreAppVisibility(0);
+            });
+            
+            
+            //save button functionality
+            //registerPollAsDraftByHost()
+            
+            
+            
+            //show Rushmore ranking to audience i message body
+            
+            toggleRushmoreAppVisibility(1);
+            
+            // let the session manager know that a poll is currently being created
+            creatingAPoll = true;
         }
         
-        function aattachPollEvemtListeners(){
+        function attachPollEvemtListeners(){
             
         }
         
         function discardPoll(){
-            
+            // tell the session manager to disregard the poll draft
+            creatingAPoll = false;
         }
         
         function registerPollWithMain(){
             
         }
         
-        function savePollAsDraftByHost(){
+        function registerPollAsDraftByHost(){
             
         }
         
         function openCategories(){
-            
+            console.log("open poll categories");
         }
     </script>
 </head>
@@ -657,8 +768,10 @@
         <div id="rushmore-application-widget-container" class="selected-application-widget-container">
             <input id="search-for-category-container" type="text" placeholder="Search Rushmore Rankings..."/>
             <div id="main-rushmore-options-container">
+                <div id="back-option-button-container" class="option-button-container">back</div>
                 <div id="create-option-button-container" class="option-button-container">create</div>
                 <div id="category-option-button-container" class="option-button-container">category</div>
+                <div id="save-option-button-container" class="option-button-container">save</div>
             </div>
         </div>
     </div>
